# openSigma

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  config.toml
idea/: openSigma Project 320359e34e68804b9e2ddb6abfb5addb.md  openSigma_Engineering_Doc.md  openSigma_idea_2.md
memory/: memory.md
src/: config.rs  lib.rs  main.rs  telegram.rs  types.rs
src/agent/: llm_client.rs  llm_gate.rs  mod.rs  second_look.rs  tuner.rs
src/agents/: longterm.rs  midterm.rs  mod.rs  shortterm.rs  traits.rs  watchdog.rs
src/data/: coinglass.rs  glassnode.rs  hyperliquid.rs  macro_sources.rs  mod.rs  news.rs  polymarket.rs
src/event_bus/: llm_filter.rs  mod.rs  router.rs  rule_engine.rs
src/execution/: exit_manager.rs  hyperliquid.rs  hyperliquid_signer.rs  hyperliquid_types.rs  kill_switch.rs  mod.rs  polymarket.rs  position_monitor.rs  risk.rs
src/journal/: logger.rs  memory.rs  mod.rs  reporter.rs
src/memory/: store.rs
src/risk/: manager.rs
src/signals/: aggregator.rs  candle_builder.rs  indicators.rs  mod.rs  pm_analyzer.rs
src/tui/: app.rs
tests/: test_hyperliquid_testnet.rs
