[package]
name = "opensigma"
version = "0.1.0"
edition = "2021"
description = "Multi-agent trading system for Hyperliquid"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# WebSocket
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Crypto / signing
ethers = { version = "2", features = ["rustls"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Unique IDs
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"
